Fixing font color and alignment
One day I'll clean up this doc.

--- a/w3.css
+++ b/w3.css
@@ -491,10 +491,10 @@ a{
 
 /* Place text in the middle of the image */
 .hero-text {
-    text-align: center;
+    text-align: left;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 20%;
     transform: translate(-50%, -50%);
-    color: white;
+    color: navy;
 }
